
=== Version 2.11.4 --- 1 February 2016 ===
- Fix reminder time edit being covered by 'in advance' combo [KDE Bug 357018]
- Fix crash after editing an alarm, if spell check is enabled [KDE Bug 356048]
- Fix occasional crash on startup [KDE Bug 358217]
- Fix specification on command line of a reminder after the alarm.
- Fix deferral time of date-only recurring alarms [KDE Bug 346060]

=== Version 2.11.3 (KDE Applications 15.08.3) --- 4 November 2015 ===
- Re-enable use of sendmail for email alarms.
- Fix conversion error in sub-repetition interval from command line.

=== Version 2.11.2 (KDE Applications 15.08.2) --- 24 September 2015 ===
- Enable typing into New Alarm dialogue while alarm is displayed (Unity desktop) [KDE Bug 352889]

=== Version 2.11.1 (KDE Applications 15.08.1) --- 1 September 2015 ===
- Fix conversion error in sub-repetition value from command line or D-Bus command.

=== Version 2.11.0 (KDE Applications 15.08.0) --- 30 July 2015 ===
- Use KDE Frameworks.
- Disable use of sendmail for email alarms, due to removal from Akonadi.

=== Version 2.10.12 (KDE 4.14.2) --- 30 September 2014 ===
- Make New Audio Alarm dialogue use sound file repeat preference setting.

=== Version 2.10.11 (KDE 4.14.0) --- 12 August 2014 ===
- [Akonadi] Fix alarms not being redisplayed after Akonadi server restarts
            (requires kdepimlibs 4.14.0) [KDE Bug 336942]

=== Version 2.10.10 (KDE 4.13.2) --- 10 May 2014 ===
- [Akonadi] Fix no Defer button in alarm windows restored after login [KDE Bug 334334]
- Fix display of duplicate alarm windows after login.

=== Version 2.10.9 (KDE 4.13.1) --- 4 May 2014 ===
- [Akonadi] Fix no Defer button in alarm windows restored after crash [KDE Bug 334334]

=== Version 2.10.8 (KDE 4.12.5) --- 18 April 2014 ===
- [Akonadi] Fix wrong startup message about no writable active alarm calendar.
- [Akonadi] Fix setting Akonadi resource read-only making it unusable (requires kdepim-runtime 4.12.5) [KDE Bug 332889]
